fix layout bug on contact page

--- a/src/components/footer/_footerStyle.scss
+++ b/src/components/footer/_footerStyle.scss
@@ -15,6 +15,8 @@
     font-family: OpenSans, sans-serif;
 
     .footer__logo_link{
+        margin-top: 20px;
+        margin-left: 10px;
         margin-bottom: 30px;
         display: flex;
         justify-content: center;
